--- a/app/src/main/res/layout/f_band_init.xml
+++ b/app/src/main/res/layout/f_band_init.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:contentDescription="@string/splash.logo.logo"
+        android:contentDescription="@string/logo.company"
         android:scaleType="center"
         android:src="@mipmap/ic_launcher"/>
 
@@ -32,7 +32,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="64dp"
             android:background="@null"
-            android:text="@string/splash.logo.pilot"
+            android:text="@string/logo.pilot"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/nursingPrimary_light"/>
 
@@ -42,7 +42,7 @@
             android:layout_gravity="center_horizontal"
             android:background="@null"
             android:padding="10dp"
-            android:text="@string/splash.logo.logo"
+            android:text="@string/logo.company"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/nursingPrimary_light"/>
     </LinearLayout>
