--- a/app/src/main/res/layout/i_profile_bluetooth_characteristics.xml
+++ b/app/src/main/res/layout/i_profile_bluetooth_characteristics.xml
@@ -9,13 +9,13 @@
         <TextView
             android:id="@+id/detail_child_list_item_characteristics_name"
             style="@style/DetailItemTextView"
-            android:text="@string/detail.child.list.item.characteristics.name"
+            android:text="@string/profile.characteristics.name"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/detail_child_list_item_characteristics_UUID"
             style="@style/DetailItemTextView"
-            android:text="@string/detail.child.list.item.characteristics.UUID" />
+            android:text="@string/profile.characteristics.UUID" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
