--- a/app/src/main/res/layout/f_prime_main_sample.xml
+++ b/app/src/main/res/layout/f_prime_main_sample.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@null"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@null">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
         android:orientation="vertical">
+
         <com.rainbow.kam.bt_scanner.tools.design.CircleCounter
-            android:id="@+id/calorie_counter"
+            android:id="@+id/counter"
             style="@style/CircleCounter"
-            app:metricText="calorie"/>
+            app:metricText="metric"/>
     </LinearLayout>
-</android.support.v4.widget.NestedScrollView>
+</RelativeLayout>
