--- a/app/src/main/res/layout/f_prime_main_dashboard.xml
+++ b/app/src/main/res/layout/f_prime_main_dashboard.xml
@@ -14,12 +14,12 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
-            android:layout_weight="1"
+            android:layout_weight="8"
             android:background="@null"
             app:cardCornerRadius="2dp"
             app:cardElevation="7dp"
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
+            android:layout_weight="5"
             android:background="@null"
             android:orientation="horizontal">
 
@@ -73,7 +73,7 @@
                         android:text="@string/dashboard.step"/>
 
                     <TextView
-                        android:id="@+id/dashboard.step"
+                        android:id="@+id/dashboard_step"
                         style="@style/DashBoardItemLabel.DashBoardItemValue"/>
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
@@ -96,7 +96,7 @@
                         android:text="@string/dashboard.calorie"/>
 
                     <TextView
-                        android:id="@+id/dashboard.calorie"
+                        android:id="@+id/dashboard_calorie"
                         style="@style/DashBoardItemLabel.DashBoardItemValue"/>
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
@@ -106,7 +106,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
+            android:layout_weight="5"
             android:background="@null"
             android:orientation="horizontal">
 
@@ -128,7 +128,7 @@
                         android:text="@string/dashboard.distance"/>
 
                     <TextView
-                        android:id="@+id/dashboard.distance"
+                        android:id="@+id/dashboard_distance"
                         style="@style/DashBoardItemLabel.DashBoardItemValue"/>
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
@@ -150,11 +150,10 @@
                         android:text="@string/dashboard.etc"/>
 
                     <TextView
-                        android:id="@+id/dashboard.etc"
+                        android:id="@+id/dashboard_etc"
                         style="@style/DashBoardItemLabel.DashBoardItemValue"/>
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
-
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
