--- a/app/src/main/res/layout/f_prime_main_distance.xml
+++ b/app/src/main/res/layout/f_prime_main_distance.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -13,8 +13,8 @@
         android:orientation="vertical">
 
         <com.rainbow.kam.bt_scanner.tools.design.CircleCounter
-            android:id="@+id/counter"
+            android:id="@+id/distance_counter"
             style="@style/CircleCounter"
-            app:metricText="metric"/>
+            app:metricText="distance"/>
     </LinearLayout>
-</android.support.v4.widget.NestedScrollView>
+</RelativeLayout>
