--- a/app/src/main/res/layout/f_profile_control.xml
+++ b/app/src/main/res/layout/f_profile_control.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView
-    android:id="@+id/details_characteristic"
+    android:id="@+id/profile_characteristic"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -73,7 +73,7 @@
                     android:text="@string/profile.label.characteristic"/>
 
                 <TextView
-                    android:id="@+id/characteristic_detail.name"
+                    android:id="@+id/control_name"
                     style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
 
             </TableRow>
@@ -85,7 +85,7 @@
                     android:text="@string/profile.label.uuid"/>
 
                 <TextView
-                    android:id="@+id/characteristic_detail.uuid"
+                    android:id="@+id/control_uuid"
                     style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
 
             </TableRow>
@@ -97,7 +97,7 @@
                     android:text="@string/profile.label.type"/>
 
                 <TextView
-                    android:id="@+id/characteristic_detail.type"
+                    android:id="@+id/control_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
@@ -114,7 +114,7 @@
                     android:text="@string/profile.label.peripheral"/>
 
                 <TextView
-                    android:id="@+id/characteristic_detail.properties"
+                    android:id="@+id/control_properties"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
@@ -131,26 +131,26 @@
             android:layout_height="wrap_content">
 
             <ToggleButton
-                android:id="@+id/characteristic_detail.notification_switcher"
+                android:id="@+id/control_notification_switcher"
                 style="@style/DeviceCharacteristicButton"
                 android:text="@string/profile.button.toggle"
                 android:textOff="Notification"
                 android:textOn="Notification"/>
 
             <Button
-                android:id="@+id/characteristic_detail.read_btn"
+                android:id="@+id/control_read_btn"
                 style="@style/DeviceCharacteristicButton"
                 android:text="@string/profile.button.read"/>
 
             <Button
-                android:id="@+id/characteristic_detail.write_btn"
+                android:id="@+id/control_write_btn"
                 style="@style/DeviceCharacteristicButton"
                 android:text="@string/profile.button.write"/>
 
         </LinearLayout>
 
         <EditText
-            android:id="@+id/characteristic_detail.hex_value"
+            android:id="@+id/control_hex_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -177,7 +177,7 @@
                     android:textSize="10sp"/>
 
                 <TextView
-                    android:id="@+id/characteristic_detail.ascii_value"
+                    android:id="@+id/control_ascii_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -198,7 +198,7 @@
                     android:textSize="10sp"/>
 
                 <TextView
-                    android:id="@+id/characteristic_detail.timestamp"
+                    android:id="@+id/control_timestamp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
