--- a/app/src/main/res/layout/i_profile_bluetooth_characteristics.xml
+++ b/app/src/main/res/layout/i_profile_bluetooth_characteristics.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/DetailItemCard"
+    style="@style/ProfileItemCard"
     app:cardBackgroundColor="@color/colorPrimaryOrange">
 
-    <LinearLayout style="@style/DetailItemFrame">
+    <LinearLayout style="@style/ProfileItemFrame">
 
         <TextView
-            android:id="@+id/detail_child_list_item_characteristics_name"
-            style="@style/DetailItemTextView"
+            android:id="@+id/profile_child_list_item_characteristics_name"
+            style="@style/ProfileItemTextView"
             android:text="@string/profile.characteristics.name"
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/detail_child_list_item_characteristics_UUID"
-            style="@style/DetailItemTextView"
+            android:id="@+id/profile_child_list_item_characteristics_UUID"
+            style="@style/ProfileItemTextView"
             android:text="@string/profile.characteristics.UUID" />
     </LinearLayout>
 
