--- a/app/src/main/res/layout/i_profile_bluetooth_service.xml
+++ b/app/src/main/res/layout/i_profile_bluetooth_service.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/DetailItemCard"
+    style="@style/ProfileItemCard"
     app:cardBackgroundColor="@color/colorPrimaryDark">
 
-    <LinearLayout style="@style/DetailItemFrame">
+    <LinearLayout style="@style/ProfileItemFrame">
 
         <TextView
-            android:id="@+id/detail_parent_list_item_service_name"
-            style="@style/DetailItemTextView"
+            android:id="@+id/profile_parent_list_item_service_name"
+            style="@style/ProfileItemTextView"
             android:text="@string/profile.service.name"
             android:textColor="#fff"
             android:textSize="20sp" />
@@ -20,16 +20,16 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/detail_parent_list_item_service_UUID"
+                android:id="@+id/profile_parent_list_item_service_UUID"
 
-                style="@style/DetailItemTextView"
+                style="@style/ProfileItemTextView"
                 android:layout_gravity="center_vertical|start"
                 android:layout_weight="1"
                 android:text="@string/profile.service.UUID" />
 
             <TextView
-                android:id="@+id/detail_parent_list_item_service_type"
-                style="@style/DetailItemTextView"
+                android:id="@+id/profile_parent_list_item_service_type"
+                style="@style/ProfileItemTextView"
                 android:layout_weight="1"
                 android:text="@string/profile.service.type"
                 android:textColor="#eee" />
