--- a/app/src/main/res/layout/v_main_nav_header.xml
+++ b/app/src/main/res/layout/v_main_nav_header.xml
@@ -15,13 +15,15 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="192dp"
               android:background="@color/colorPrimaryDark"
               android:gravity="bottom"
               android:orientation="vertical"
               android:padding="@dimen/nav_header_padding"
-              android:theme="@style/ThemeOverlay.AppCompat.Dark">
+              android:theme="@style/ThemeOverlay.AppCompat.Dark"
+              tools:ignore="Overdraw">
 
     <TextView
         android:layout_width="match_parent"
