Make Animation Expand / collapse in DeviceAdapter
DeviceAdapter 의 뷰에 애니메이션 추가 (테스트)

collapse_device_item.xml 생성
expand_device_item.xml 생성

i_bluetooth_device.xml :
    - bond / type / rssi 뷰를 가진 TableRow 에 ID 를 생성

DeviceAdapter :
    - bond / type / rssi 를 onLongClick 시 expand / collapse 애니메이션 발동
    - 일반 onClick 시에는 기능 유지 (Main -> DeviceProfile)

--- a/app/src/main/res/layout/i_bluetooth_device.xml
+++ b/app/src/main/res/layout/i_bluetooth_device.xml
@@ -38,7 +38,9 @@
                 android:textColor="@color/colorPrimaryAccent"/>
         </TableRow>
 
-        <TableRow style="@style/DeviceItemTableRow">
+        <TableRow
+            android:id="@+id/row_bond"
+            style="@style/DeviceItemTableRow">
 
             <TextView
                 style="@style/DeviceItemLabel"
@@ -50,7 +52,9 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"/>
         </TableRow>
 
-        <TableRow style="@style/DeviceItemTableRow">
+        <TableRow
+            android:id="@+id/row_type"
+            style="@style/DeviceItemTableRow">
 
             <TextView
                 style="@style/DeviceItemLabel"
@@ -63,7 +67,9 @@
 
         </TableRow>
 
-        <TableRow style="@style/DeviceItemTableRow">
+        <TableRow
+            android:id="@+id/row_rssi"
+            style="@style/DeviceItemTableRow">
 
             <TextView
                 style="@style/DeviceItemLabel"
