--- a/app/src/main/res/layout/f_profile_control.xml
+++ b/app/src/main/res/layout/f_profile_control.xml
@@ -42,8 +42,8 @@
                     style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
             </TableRow>
 
-            <TableRow style="@style/DeviceTableRaw">
-
+            <TableRow
+                style="@style/DeviceTableRaw">
                 <TextView
                     style="@style/DeviceCharacteristicInfoLabel"
                     android:text="@string/profile.label.service"/>
