--- a/app/src/main/res/layout/i_bluetooth_device.xml
+++ b/app/src/main/res/layout/i_bluetooth_device.xml
@@ -10,19 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
-        android:padding="20dp">
+        android:divider="?android:attr/dividerHorizontal"
+        android:padding="10dp"
+        android:showDividers="middle">
 
         <TableRow style="@style/DeviceItemTableRow">
 
             <TextView
                 style="@style/DeviceItemLabel"
                 android:text="@string/profile.label.name"
-                android:textColor="@color/colorAccent"/>
+                android:textColor="@color/text_dark"/>
 
             <TextView
                 android:id="@+id/item_name"
                 style="@style/DeviceItemLabel.DeviceItemText"
-                android:textColor="@color/colorAccent"/>
+                android:textColor="@color/text_dark"/>
         </TableRow>
 
         <TableRow style="@style/DeviceItemTableRow">
@@ -30,12 +32,12 @@
             <TextView
                 style="@style/DeviceItemLabel"
                 android:text="@string/profile.label.address"
-                android:textColor="@color/colorPrimaryAccent"/>
+                android:textColor="@color/text_dark"/>
 
             <TextView
                 android:id="@+id/item_address"
                 style="@style/DeviceItemLabel.DeviceItemText"
-                android:textColor="@color/colorPrimaryAccent"/>
+                android:textColor="@color/text_dark"/>
         </TableRow>
 
         <TableRow
