--- a/app/src/main/res/layout/i_profile_bluetooth_service.xml
+++ b/app/src/main/res/layout/i_profile_bluetooth_service.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/ProfileItemCard"
-    app:cardBackgroundColor="@color/colorPrimaryDark">
+<android.support.v7.widget.CardView style="@style/ProfileItemCard"
+                                    xmlns:android="http://schemas.android.com/apk/res/android"
+                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                    app:cardBackgroundColor="@android:color/holo_blue_dark">
 
-    <LinearLayout style="@style/ProfileItemFrame">
+    <LinearLayout
+        style="@style/ProfileItemFrame"
+        android:divider="?android:attr/dividerHorizontal"
+        android:showDividers="middle">
 
         <TextView
             android:id="@+id/profile_parent_list_item_service_name"
             style="@style/ProfileItemTextView"
             android:text="@string/profile.service.name"
             android:textColor="#fff"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,14 +28,14 @@
                 style="@style/ProfileItemTextView"
                 android:layout_gravity="center_vertical|start"
                 android:layout_weight="1"
-                android:text="@string/profile.service.UUID" />
+                android:text="@string/profile.service.UUID"/>
 
             <TextView
                 android:id="@+id/profile_parent_list_item_service_type"
                 style="@style/ProfileItemTextView"
                 android:layout_weight="1"
                 android:text="@string/profile.service.type"
-                android:textColor="#eee" />
+                android:textColor="#eee"/>
         </LinearLayout>
     </LinearLayout>
 
