--- a/app/src/main/res/layout/i_bluetooth_device.xml
+++ b/app/src/main/res/layout/i_bluetooth_device.xml
@@ -38,6 +38,7 @@
                 android:id="@+id/item_address"
                 style="@style/DeviceItemLabel.DeviceItemText"
                 android:textColor="@color/text_dark"/>
+
         </TableRow>
 
         <TableRow
@@ -83,4 +84,11 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"/>
         </TableRow>
     </TableLayout>
+
+    <ImageView
+        android:id="@+id/item_expend"
+        android:layout_width="wrap_content"
+        android:layout_gravity="end|top"
+        android:layout_margin="7dp"
+        android:layout_height="wrap_content"/>
 </android.support.v7.widget.CardView>
