Update Layout of PrimeActivity
PrimeActivity 의 뷰 레이아웃 수정

v_nav_header.xml : 이름 변경

v_main_content.xml : 검색 버튼 임시 삭제

f_prime_user.xml : 백그라운드 Null 화

* f_prime_user.xml 네비게이션 뷰 헤더 추가 (v_nav_header)

* f_prime_main_dashboard.xml :
     - CardView / Icon / Label / Text 에서 CardView / Image / Label / Text 로 수정
     - 자세한 레이아웃은 소스 확인

--- a/app/src/main/res/layout/a_main.xml
+++ b/app/src/main/res/layout/a_main.xml
@@ -17,6 +17,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/v_main_nav_header"
+        app:headerLayout="@layout/v_nav_header"
         app:menu="@menu/menu_main"/>
 </android.support.v4.widget.DrawerLayout>
