--- a/app/src/main/res/layout/a_prime.xml
+++ b/app/src/main/res/layout/a_prime.xml
@@ -110,6 +110,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
+            app:headerLayout="@layout/v_nav_header"
             app:menu="@menu/menu_prime"/>
     </android.support.v4.widget.DrawerLayout>
 </FrameLayout>
