--- a/app/src/main/res/layout/f_prime_user.xml
+++ b/app/src/main/res/layout/f_prime_user.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-                                            xmlns:app="http://schemas.android.com/apk/res-auto"
-                                            android:layout_width="match_parent"
-                                            android:layout_height="match_parent"
-                                            android:background="@android:color/background_light">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="@null">
 
     <LinearLayout
         android:id="@+id/prime_init_group"
@@ -105,16 +105,6 @@
                 android:layout_gravity="end"
                 android:src="@drawable/ic_keyboard_arrow_right_white_36dp"
                 app:backgroundTint="@color/colorAccent"/>
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/prime_skip_fab"
-                style="@style/Fab"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_gravity="start"
-                android:src="@drawable/ic_keyboard_arrow_right_white_36dp"
-                app:backgroundTint="@color/colorAccent"/>
         </RelativeLayout>
-
     </LinearLayout>
-</android.support.v4.widget.NestedScrollView>
+</ScrollView>
