--- a/app/src/main/res/layout/v_nav_header.xml
+++ b/app/src/main/res/layout/v_nav_header.xml
@@ -14,12 +14,11 @@
   ~ limitations under the License.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="192dp"
               android:background="@color/colorPrimaryDark"
-              android:gravity="bottom"
               android:orientation="vertical"
               android:padding="@dimen/nav_header_padding"
               android:theme="@style/ThemeOverlay.AppCompat.Dark"
@@ -30,6 +29,9 @@
         android:layout_height="wrap_content"
         android:background="@null"
         android:text="@string/gattManager"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:id="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"/>
 
-</LinearLayout>
+</RelativeLayout>
