--- a/app/src/main/res/layout/f_prime_main_dashboard.xml
+++ b/app/src/main/res/layout/f_prime_main_dashboard.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@null">
 
     <LinearLayout
@@ -14,146 +14,241 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
+            android:layout_height="100dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
-            android:layout_weight="8"
+            
             android:background="@null"
             app:cardCornerRadius="2dp"
-            app:cardElevation="7dp"
+            app:cardElevation="8dp"
             app:cardPreventCornerOverlap="false"
             app:contentPadding="0dp">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/deviceTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="10dp"
-                android:background="@null"
-                android:text="@string/dashboard.time"/>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/step_wallpaper"
+                    android:tint="#88101010"
+                    />
 
-            <com.rainbow.kam.bt_scanner.tools.design.CircleButton
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center_vertical|end"
-                android:background="@null"
-                android:src="@drawable/ic_link_white_36dp"
-                app:cb_color="@color/link"
-                app:cb_pressedRingWidth="8dip"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:background="?android:selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:padding="15dp"
+                    android:text="@string/dashboard.step"
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp"/>
+
+                <TextView
+                    android:id="@+id/dashboard_step"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="25dp"
+                    android:background="?android:selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@android:color/white"
+                    android:textSize="30sp"/>
+
+            </RelativeLayout>
+
         </android.support.v7.widget.CardView>
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="5"
+            android:layout_height="100dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
             android:background="@null"
-            android:orientation="horizontal">
+            app:cardCornerRadius="2dp"
+            app:cardElevation="8dp"
+            app:cardPreventCornerOverlap="false"
+            app:contentPadding="0dp">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <android.support.v7.widget.CardView
-                style="@style/DashBoardItemFrame.DashBoardCard">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/calorie_walpaper"
+                    android:tint="#88101010"
+                    />
 
-                <RelativeLayout
-                    style="@style/DashBoardItemFrame">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:background="?android:selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:padding="15dp"
+                    android:text="@string/dashboard.calorie"
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp"/>
 
-                    <com.rainbow.kam.bt_scanner.tools.design.CircleButton
-                        style="@style/DashBoardCircleButton"
-                        android:src="@drawable/ic_directions_walk_white_36dp"
-                        app:cb_color="@color/stepColor"/>
+                <TextView
+                    android:id="@+id/dashboard_calorie"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="25dp"
+                    android:background="?android:selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@android:color/white"
+                    android:textSize="30sp"/>
 
-                    <TextView
-                        style="@style/DashBoardItemLabel"
-                        android:text="@string/dashboard.step"/>
+            </RelativeLayout>
 
-                    <TextView
-                        android:id="@+id/dashboard_step"
-                        style="@style/DashBoardItemLabel.DashBoardItemValue"/>
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
 
-
-            <android.support.v7.widget.CardView
-                style="@style/DashBoardItemFrame.DashBoardCard">
-
-
-                <RelativeLayout
-                    style="@style/DashBoardItemFrame">
-
-                    <com.rainbow.kam.bt_scanner.tools.design.CircleButton
-                        style="@style/DashBoardCircleButton"
-                        android:src="@drawable/ic_whatshot_white_36dp"
-                        app:cb_color="@color/calorieColor"/>
-
-                    <TextView
-                        style="@style/DashBoardItemLabel"
-                        android:text="@string/dashboard.calorie"/>
-
-                    <TextView
-                        android:id="@+id/dashboard_calorie"
-                        style="@style/DashBoardItemLabel.DashBoardItemValue"/>
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
-        </LinearLayout>
-
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="5"
+            android:layout_height="100dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
             android:background="@null"
-            android:orientation="horizontal">
+            app:cardCornerRadius="2dp"
+            app:cardElevation="8dp"
+            app:cardPreventCornerOverlap="false"
+            app:contentPadding="0dp">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <android.support.v7.widget.CardView
-                style="@style/DashBoardItemFrame.DashBoardCard">
+                <ImageView
+                    android:id="@+id/countryImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/distance_wallpaper"
+                    android:tint="#88101010"
+                    />
 
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:background="?android:selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:padding="15dp"
+                    android:text="@string/dashboard.distance"
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp"/>
 
-                <RelativeLayout
-                    style="@style/DashBoardItemFrame">
+                <TextView
+                    android:id="@+id/dashboard_distance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="25dp"
+                    android:background="?android:selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@android:color/white"
+                    android:textSize="30sp"/>
 
-                    <com.rainbow.kam.bt_scanner.tools.design.CircleButton
-                        style="@style/DashBoardCircleButton"
-                        android:src="@drawable/ic_beenhere_white_36dp"
-                        app:cb_color="@color/distanceColor"/>
+            </RelativeLayout>
 
-                    <TextView
-                        style="@style/DashBoardItemLabel"
-                        android:text="@string/dashboard.distance"/>
+        </android.support.v7.widget.CardView>
 
-                    <TextView
-                        android:id="@+id/dashboard_distance"
-                        style="@style/DashBoardItemLabel.DashBoardItemValue"/>
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:background="@null"
+            app:cardCornerRadius="2dp"
+            app:cardElevation="8dp"
+            app:cardPreventCornerOverlap="false"
+            app:contentPadding="0dp">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <android.support.v7.widget.CardView
-                style="@style/DashBoardItemFrame.DashBoardCard">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/distance_wallpaper"
+                    android:tint="#88101010"
+                    />
 
-                <RelativeLayout
-                    style="@style/DashBoardItemFrame">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:background="?android:selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:padding="15dp"
+                    android:text="@string/dashboard.time"
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp"/>
 
-                    <com.rainbow.kam.bt_scanner.tools.design.CircleButton
+                <TextView
+                    android:id="@+id/deviceTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="25dp"
+                    android:background="?android:selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"/>
 
-                        style="@style/DashBoardCircleButton"
-                        app:cb_color="@color/etcColor"/>
+            </RelativeLayout>
 
-                    <TextView
-                        style="@style/DashBoardItemLabel"
-                        android:text="@string/dashboard.etc"/>
+        </android.support.v7.widget.CardView>
 
-                    <TextView
-                        android:id="@+id/dashboard_etc"
-                        style="@style/DashBoardItemLabel.DashBoardItemValue"/>
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
-        </LinearLayout>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
