Update Fragment Layout and getValue code in Prime package
PrimeActivity :
    - ViewPager 어댑터는 대시보드 / 히스토리 프래그먼트만 담당
    - 대시보드 Fragment 의 카드 뷰 콜백 DashboardFragment.OnClickCardListener 을 추가
    - 카드뷰 클릭시 히스토리 프래그먼트로 넘어가 뷰를 재설정
    - 불필요한 메뉴 아이템 제거
    - TabLayout 과 ViewPager 의 Limit 를 2 로 수정
    - Prime 기기의 일일 정보를 로드하는 loadPrimeData 메서드 추가

DashboardFragment :
    - OnClickCardListener 인터페이스 추가
         void onStepClick(int value);
         void onCalorieClick(int value);
         void onDistanceClick(int value);
    - 각각의 카드뷰와 클릭 리스너를 생성, 콜백으로 넘긴다

CircleCounter :
    - TypedArray 수정

추가 xml :
    - f_prime_main_history.xml
    - i_prime_history.xml

수정 xml :
    - a_prime.xml : ViewPager 의 타이틀 뷰 (TabLayout)의 속성 변경
    - f_prime_main_dashboard.xml : 각각의 카드뷰에 Ripple 효과 추가 , 클릭가능 적용

--- a/app/src/main/res/layout/a_prime.xml
+++ b/app/src/main/res/layout/a_prime.xml
@@ -2,15 +2,15 @@
 <FrameLayout
     android:id="@+id/prime_start_frame"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@null">
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/prime_drawer_layout"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
@@ -74,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:background="@null"
                     app:tabGravity="center"
-                    app:tabMode="scrollable"/>
+                    app:tabMode="fixed"/>
 
 
             </android.support.design.widget.AppBarLayout>
@@ -89,7 +89,7 @@
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/prime_swipeRefreshLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@null"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -98,7 +98,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
-                    android:foreground="?android:windowContentOverlay"/>
+                    android:foreground="?android:windowContentOverlay"
+                    />
             </android.support.v4.widget.SwipeRefreshLayout>
 
         </android.support.design.widget.CoordinatorLayout>
