--- a/app/src/main/res/layout/f_prime_main_dashboard.xml
+++ b/app/src/main/res/layout/f_prime_main_dashboard.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="fill_vertical"
-    android:background="@null">
+    android:background="@null"
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,10 +16,13 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/card_step"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:background="@null"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="2dp"
             app:cardElevation="8dp"
             app:cardPreventCornerOverlap="false"
@@ -42,8 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
-                    android:background="?android:selectableItemBackground"
-                    android:clickable="true"
+                    android:background="@null"
                     android:focusable="true"
                     android:gravity="center"
                     android:padding="15dp"
@@ -58,8 +61,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="25dp"
-                    android:background="?android:selectableItemBackground"
-                    android:clickable="true"
+                    android:background="@null"
                     android:focusable="true"
                     android:gravity="center"
                     android:textColor="@android:color/white"
@@ -70,11 +72,14 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/card_calorie"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@null"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="2dp"
             app:cardElevation="8dp"
             app:cardPreventCornerOverlap="false"
@@ -98,8 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
-                    android:background="?android:selectableItemBackground"
-                    android:clickable="true"
+                    android:background="@null"
                     android:focusable="true"
                     android:gravity="center"
                     android:padding="15dp"
@@ -114,8 +118,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="25dp"
-                    android:background="?android:selectableItemBackground"
-                    android:clickable="true"
+                    android:background="@null"
                     android:focusable="true"
                     android:gravity="center"
                     android:textColor="@android:color/white"
@@ -126,11 +129,14 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/card_distance"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@null"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="2dp"
             app:cardElevation="8dp"
             app:cardPreventCornerOverlap="false"
@@ -156,8 +162,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
-                    android:background="?android:selectableItemBackground"
-                    android:clickable="true"
+                    android:background="@null"
                     android:focusable="true"
                     android:gravity="center"
                     android:padding="15dp"
@@ -172,8 +177,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="25dp"
-                    android:background="?android:selectableItemBackground"
-                    android:clickable="true"
+                    android:background="@null"
                     android:focusable="true"
                     android:gravity="center"
                     android:textColor="@android:color/white"
@@ -189,6 +193,8 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@null"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="2dp"
             app:cardElevation="8dp"
             app:cardPreventCornerOverlap="false"
@@ -212,8 +218,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
-                    android:background="?android:selectableItemBackground"
-                    android:clickable="true"
+                    android:background="@null"
                     android:focusable="true"
                     android:gravity="center"
                     android:padding="15dp"
@@ -227,8 +232,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_margin="25dp"
-                    android:background="?android:selectableItemBackground"
-                    android:clickable="true"
+                    android:background="@null"
                     android:focusable="true"
                     android:gravity="center"
                     android:textColor="@android:color/white"
@@ -241,8 +245,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="25dp"
-                    android:background="?android:selectableItemBackground"
-                    android:clickable="true"
+                    android:background="@null"
                     android:focusable="true"
                     android:gravity="center"
                     android:textColor="@android:color/white"
