Update CardView Click Code in HistoryFragment
HistoryFragment 의 카드뷰 수정

PrimeActivity :
    - 메뉴 리스너에 카드 추가
    - 카드 클릭 콜백 단일화

HistoryAdapter :
    - 히스토리 카드에 일자 추가

DashboardFragment :
    - 라벨을 R.String 으로 이동

PrimeHelper : 상수 추가
     INDEX_STEP = 0;
     INDEX_CALORIE = 1;
     INDEX_DISTANCE = 2;
     INDEX_DATETIME = 3;

--- a/app/src/main/res/menu/menu_prime.xml
+++ b/app/src/main/res/menu/menu_prime.xml
@@ -3,21 +3,21 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".activity.prime.PrimeActivity">
 
-    <item android:title="@string/menu.info">
+    <item android:title="@string/menu.setting">
         <menu>
             <group android:checkableBehavior="single">
                 <item
-                    android:id="@+id/menu.prime.info.user"
+                    android:id="@+id/menu.prime.setting.device"
                     android:icon="@drawable/ic_menu"
-                    android:title="@string/menu.info.scan"/>
+                    android:title="@string/menu.setting.device"/>
                 <item
-                    android:id="@+id/menu.prime.info.prime"
+                    android:id="@+id/menu.prime.setting.user"
                     android:icon="@drawable/ic_menu"
-                    android:title="@string/menu.info.prime"/>
+                    android:title="@string/menu.setting.user"/>
                 <item
-                    android:id="@+id/menu.prime.info.goal"
+                    android:id="@+id/menu.prime.setting.goal"
                     android:icon="@drawable/ic_menu"
-                    android:title="@string/menu.info.goal"/>
+                    android:title="@string/menu.setting.goal"/>
             </group>
 
         </menu>
