--- a/app/src/main/res/layout/f_prime_main_dashboard.xml
+++ b/app/src/main/res/layout/f_prime_main_dashboard.xml
@@ -188,6 +188,7 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/card_datetime"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_margin="10dp"
