--- a/app/src/main/res/layout/i_prime_history.xml
+++ b/app/src/main/res/layout/i_prime_history.xml
@@ -14,26 +14,36 @@
     app:cardPreventCornerOverlap="false"
     app:contentPadding="0dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_margin="10dp"
         android:background="@null"
         android:divider="?android:attr/dividerHorizontal"
-        android:orientation="vertical"
         android:showDividers="middle">
+
 
         <TextView
             android:id="@+id/history_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
             android:layout_margin="7dp"
             android:background="@null"
-            android:orientation="vertical"
             android:textColor="@color/text_dark"
             android:textSize="20sp"/>
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/history_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="7dp"
+            android:background="@null"
+            android:textColor="@color/text_dark"
+            android:textSize="20sp"/>
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
