Create setting Goal in GoalDialogFragment
GoalDialogFragment 생성 / 목표 설정 코드 생성

GoalDialogFragment : Create
    - 유저 신체정보 추가 클래스와 유사함
    - OnSettingGoalListener 인터페이스 생성
    - 목표 설정 뒤, Accept 메서드 호출 시 onSettingGoal 콜백 호출

PrimeFragment :
    - 누적 (total) 값을 CircleCounter 에서 일반 CardView 내부의 TextView 로 적용
    - CircleCounter 는 금일 값을 적용하고 Range 로 목표를 표현한다
    - setCircleCounterGoalRange 메서드 추가

CharacteristicListFragment / ServiceListFragment :
    - 어댑터 적용시 불필요한 캐스팅 삭제

CircleCounter :
    - setRange 메서드에서 int 대신 String 값을 받아 int 로 캐스팅 한뒤에 Value 적용
    - resetRange 메서드를 추가하여 유저 목표 설정시 Range 를 다시 Draw 함

df_prime_user.xml :
    - AppCompatEditText 의 불필요한 ID 값 제거

df_prime_goal.xml :
    - 유저정보 레이아웃 생성

strings.xml
    - 기본 목표 값 아이템 추가

styles_setting.xml :
    - 스타일 네이밍 수정

--- a/app/src/main/res/layout/df_prime_user.xml
+++ b/app/src/main/res/layout/df_prime_user.xml
@@ -14,55 +14,50 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/prime_add_user_name"
-            style="@style/AddUserEditText.AddUserInput">
+            style="@style/TextInputEditText.Input">
 
             <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/edit_add_user_name"
-                style="@style/AddUserEditText"
+                style="@style/TextInputEditText"
                 android:hint="@string/add.user.name.hint"
                 android:inputType="text"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/prime_add_user_age"
-            style="@style/AddUserEditText.AddUserInput">
+            style="@style/TextInputEditText.Input">
 
             <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/edit_add_user_age"
-                style="@style/AddUserEditText"
+                style="@style/TextInputEditText"
                 android:hint="@string/add.user.age.hint"
                 android:inputType="numberSigned"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/prime_add_user_height"
-            style="@style/AddUserEditText.AddUserInput">
+            style="@style/TextInputEditText.Input">
 
             <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/edit_add_user_height"
-                style="@style/AddUserEditText"
+                style="@style/TextInputEditText"
                 android:hint="@string/add.user.height.hint"
                 android:inputType="numberSigned"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/prime_add_user_weight"
-            style="@style/AddUserEditText.AddUserInput">
+            style="@style/TextInputEditText.Input">
 
             <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/edit_add_user_weight"
-                style="@style/AddUserEditText"
+                style="@style/TextInputEditText"
                 android:hint="@string/add.user.weight.hint"
                 android:inputType="numberSigned"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/prime_add_user_step"
-            style="@style/AddUserEditText.AddUserInput">
+            style="@style/TextInputEditText.Input">
 
             <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/edit_add_user_step"
-                style="@style/AddUserEditText"
+                style="@style/TextInputEditText"
                 android:hint="@string/add.user.step.hint"
                 android:inputType="number"/>
         </android.support.design.widget.TextInputLayout>
