--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,7 +11,7 @@
     <dimen name="second">15dp</dimen>
     <dimen name="third">20dp</dimen>
 
-    <dimen name="add_user_input_margin">10dp</dimen>
+    <dimen name="text_input_margin">10dp</dimen>
     <dimen name="deviceItem_margin">7dp</dimen>
 
     <dimen name="nav_header_padding">15dp</dimen>
