Update History / Card View in PrimeActivity
PrimeActivity 의 히스토리 / 카드 뷰 코드를 수정함

PrimeActivity :
    - setMaterialView 메서드에서 NestedScrollView 의 스크롤 콜백을 받아 각 프래그먼트의 포지션을 이동 (테스트)
    - YScrollDetector 제거
    - 업데이트 시간 뷰 적용은 주석처리

HistoryAdapter :
    - unit 배열 추가
    - bindViews 시 값 뒤에 unit 추가

PrimeFragment :
    - unit 배열 추가
    - setTextTotalValue 시 값 뒤에 unit 추가
    - setCardTransition 추가 카드뷰 포지션 적용

--- a/app/src/main/res/layout/a_prime.xml
+++ b/app/src/main/res/layout/a_prime.xml
@@ -67,6 +67,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:popupTheme="@style/AppTheme.PopupOverlay"
                 app:tabGravity="center"
                 app:tabMode="fixed"/>
 
@@ -117,6 +119,8 @@
                 </LinearLayout>
             </com.rainbow.kam.bt_scanner.tools.view.PagerNestedScrollView>
         </android.support.v4.widget.SwipeRefreshLayout>
+
+
     </android.support.design.widget.CoordinatorLayout>
 
 
