--- a/app/src/main/res/layout/i_prime_history.xml
+++ b/app/src/main/res/layout/i_prime_history.xml
@@ -38,6 +38,7 @@
         <ImageView
             android:id="@+id/history_icon"
             android:layout_width="wrap_content"
+            android:layout_margin="5dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
